fixed margins on mobile??? hopefully?

--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
     margin: 24px;
     margin-left: 48px;
     margin-right: 48px;
-    min-width: 600px;
+    /*min-width: 600px;*/
 }
 
 /* 5. Improve media defaults */
@@ -407,7 +407,7 @@ h3 {
     height: 80px;
     width: auto;
     position: absolute;
-    top: 30%;
+    top: 60%;
     /* Initial vertical position */
     left: 0;
     /* Initial horizontal position */
